# ZoPatract

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  README_zh.md  REPORT.md  REPORT_zh.md  build_release.sh  dev.Dockerfile
.circleci/: config.yml
ci/: before_deploy.sh
scripts/: clang-format.sh  cov.sh  one_liner.sh  release.sh
zokrates_book/: book.toml
zokrates_cli/: Cargo.toml
zokrates_core/: Cargo.toml
zokrates_field/: Cargo.toml
zopatract_abi/: Cargo.toml
zopatract_abi/src/: lib.rs
zopatract_book/: .gitignore  book.toml
zopatract_cli/: Cargo.toml
zopatract_cli/src/: bin.rs
zopatract_cli/tests/: integration.rs
zopatract_cli/tests/contract/: package-lock.json  package.json
zopatract_common/: Cargo.toml
zopatract_core/: Cargo.toml
zopatract_core_test/: Cargo.toml  build.rs
zopatract_field/: Cargo.toml
zopatract_js/: Cargo.toml  Dockerfile  README.md  build.sh  gulpfile.js  index.d.ts  index.js  package-lock.json  package.json  publish.sh  wrapper.js
zopatract_js/node/: index.js
zopatract_js/src/: lib.rs
zopatract_js/tests/: tests.js
zopatract_parser/: Cargo.toml  (+1 more)
zopatract_stdlib/: Cargo.toml  build.rs
zopatract_stdlib/stdlib/ecc/: edwardsOrderCheck.zok
zopatract_stdlib/stdlib/hashes/mimc7/: mimc7R10.zok  mimc7R20.zok  mimc7R50.zok  mimc7R90.zok
zopatract_stdlib/stdlib/hashes/pedersen/: 512bit.zok
zopatract_stdlib/stdlib/hashes/sha256/: shaRound.zok
zopatract_stdlib/stdlib/signatures/: verifyEddsa.zok
zopatract_stdlib/stdlib/utils/pack/u32/: pack256.zok
zopatract_stdlib/tests/tests/ecc/: edwardsAdd.json  edwardsAdd.zok  edwardsCompress.json  edwardsCompress.zok  edwardsOnCurve.json  edwardsOnCurve.zok  edwardsOrderCheck.json  edwardsOrderCheck.zok  edwardsScalarMult.json  edwardsScalarMult.zok  proofOfOwnership.json  proofOfOwnership.zok
zopatract_stdlib/tests/tests/hashes/mimc7/: mimc7R10.json  mimc7R20.json  mimc7R50.json  mimc7R90.json
zopatract_stdlib/tests/tests/hashes/mimcSponge/: mimcFeistel.json  mimcSponge.json
zopatract_stdlib/tests/tests/hashes/pedersen/: 512bit.json  512bit.zok
zopatract_stdlib/tests/tests/hashes/sha256/: 1024bitPadded.json  512bit.json  512bitPacked.json  512bitPacked2.json  512bitPadded.json
zopatract_stdlib/tests/tests/hashes/utils/: 256bitsDirectionHelper.json  256bitsDirectionHelper.zok
zopatract_stdlib/tests/tests/signatures/: verifyEddsa.json  verifyEddsa.zok
zopatract_stdlib/tests/tests/utils/casts/: to_bits.json  to_field.json
zopatract_stdlib/tests/tests/utils/multiplexer/: lookup1bit.json  lookup2bit.json  lookup3bitSigned.json
zopatract_stdlib/tests/tests/utils/pack/bool/: nonStrictUnpack256.json  pack128.json  unpack128.json
zopatract_stdlib/tests/tests/utils/pack/u32/: nonStrictUnpack256.json  pack128.json  unpack128.json
zopatract_test/: Cargo.toml
zopatract_test/src/: lib.rs
(+171 files in other folders)
