[package]
name = "zopatract_js"
version = "1.0.27"
authors = ["Darko Macesic"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.1.4"
js-sys = "0.3.33"
serde = { version = "^1.0.59", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.46", features = ["serde-serialize"] }
zopatract_core = { path = "../zopatract_core", features = ["wasm"], default-features = false }
zopatract_common = { path = "../zopatract_common" }
zopatract_field = { path = "../zopatract_field" }
zopatract_abi = { path = "../zopatract_abi" }
console_error_panic_hook = "0.1.5"