[package]
name = "zopatract_stdlib"
version = "0.1.7"
authors = ["Stefan Deml <stefandeml@gmail.com>", "schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[dev-dependencies]
zopatract_test = { version = "0.1", path = "../zopatract_test" }

[build-dependencies]
fs_extra = "1.1.0"
zopatract_test_derive = { version = "0.0", path = "../zopatract_test_derive" }

