[package]
name = "zopatract_test"
version = "0.1.4"
authors = ["schaeff <thibaut@schaeff.fr>"]
edition = "2018"

[dependencies]
zopatract_field = { version = "0.3", path = "../zopatract_field" }
zopatract_core = { version = "0.5", path = "../zopatract_core" }
zopatract_fs_resolver = { version = "0.5", path = "../zopatract_fs_resolver" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
